--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ task zip(type: Zip) {
 		include "routes/**"
 		include "views/**"
 	}
-	destination file("dist")
+	destinationDirectory = file("dist")
 	baseName "trainSchedule"
 }
 
